--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,9 +1,23 @@
 /* css styles */
 
-pre.sourceCode {
+pre.sourceCode, pre {
 	border: 1px solid #a2a2a2;
 }
 
 p, a, li {
 	color: #303d64 !important;
+}
+
+#title-block-header {
+	text-align: center;
+}
+
+.tippy-content {
+	border: 1px solid #a2a2a2;
+	border-radius: 2%;
+	background-color: #303d64;
+}
+
+.tippy-content > p {
+	color: white !important;
 }
